# Lovelace

./: .gitignore  Cargo.toml  README.md  changelog.md  components.json  index.html  package.json  tauri.conf.json  todo.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: index.ts
app/components/Editor/: Editor.tsx  Lines.tsx  compiler.ts  index.tsx
app/components/Menu/: Menu.tsx  MenuBar.tsx  MenuItem.tsx  Menus.tsx  index.tsx
app/components/Menu/Menus/: File.tsx  index.ts
app/components/Sidebar/: Context.tsx  File.tsx  FileDir.tsx  FilePlain.tsx  Nav.tsx  Sidebar.tsx  index.tsx  utils.ts  utils.tsx
app/components/ui/: context-menu.tsx  tabs.tsx
app/hooks/: useActivate.tsx  useActiveStore.tsx  useOpenFolder.tsx  useOpenStore.tsx
app/hooks/actions/: useActivate.tsx  useCreateDirectory.tsx  useCreateFile.tsx  useFsLogo.tsx  useOpenFolder.tsx  useRename.tsx
app/hooks/stores/: useActiveStore.tsx  useOpenStore.tsx
app/interfaces/: index.ts
app/lib/: builtin.ts
app/lib/modules/: html.ts
src/: index.css  main.rs  main.tsx
src/components/: index.ts
src/components/Editor/: index.tsx
src/components/Sidebar/: File.tsx  FileDir.tsx  FilePlain.tsx  Nav.tsx  index.tsx
src/components/ui/: collapsible.tsx  tabs.tsx
src/hooks/actions/: useActivate.tsx  useDeleteFile.tsx  useOpenFolder.tsx  useRefreshDir.tsx
src/hooks/stores/: useActiveStore.tsx  useOpenStore.tsx
versions/: install.sh
