[package]
name = "app"
version = "0.7.0"
description = "A Tauri App"
authors = ["418e"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["api-all"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
